calendarfeed (0.3.0) unstable; urgency=low

  * Settings are l10n-aware now
  * Setting for date format
  * Calendar color bar
  * Bug with wrong time for cases with events from another timezone fixed

 -- Denis Kormalev <kormalev.denis@gmail.com>  Wed, 23 Nov 2011 23:00:00 +0400


calendarfeed (0.2.4) unstable; urgency=low

  * Refresh button support
  * Click on item opens calendar
  * Offline refresh
  * Time limit fo future events added
  * Setings actualized
  * Bugfixes

 -- Denis Kormalev <kormalev.denis@gmail.com>  Tue, 22 Nov 2011 23:00:00 +0400