@@ -1,8 +1,10 @@
 calendarfeed (0.3.0) unstable; urgency=low
 
   * Settings are l10n-aware now
+  * Russian localization
   * Setting for date format
   * Calendar color bar
+  * Highlighting today events setting
   * Bug with wrong time for cases with events from another timezone fixed
 
  -- Denis Kormalev <kormalev.denis@gmail.com>  Wed, 23 Nov 2011 23:00:00 +0400
